# cardano-init

./: .gitignore  ADDING_A_TOOL.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  REQUIREMENTS.md
registry/tools/: aiken.toml  blaster.toml  meshjs.toml  scalus.toml
src/: contract.rs  main.rs
src/cli/: interactive.rs  mod.rs  oneshot.rs  output.rs
src/registry/: loader.rs  mod.rs  types.rs
src/scaffold/: context.rs  mod.rs  planner.rs  renderer.rs  writer.rs
src/web/: mod.rs  ui.html
templates/_base/: Justfile.jinja  README.md.jinja  env.jinja  gitignore
templates/_nix/: flake.nix.jinja
templates/aiken/on-chain/: Justfile.jinja  aiken.toml.jinja  manifest.toml
templates/aiken/on-chain/validators/: example.ak
templates/blaster/formal-methods/: Justfile.jinja  manifest.toml
templates/blaster/formal-methods/spec/: example.spec
templates/meshjs/off-chain/: Justfile.jinja  manifest.toml  package.json.jinja
templates/meshjs/off-chain/src/: index.ts
