[package]
name = "cardano-init"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rust-embed = "8"
thiserror = "2"
minijinja = "2"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
